Fixed some LaF colors. fixed a bug where certain components would not update their ui when the laf is changed. Added adaptive icon for light/dark ui + added light icon versions (WIP).
Further improvement in the Event api.