@@ -114,6 +114,7 @@
                 <configuration>
                     <compilerArgs>
                         <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/com.sun.java.swing=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
